WIP friend service tests